# mat

./: .gitignore  APPLE_SIGNING_SETUP.md  FINAL_TEST_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MICROPHONE_DEBUG.md  PERMISSION_SETUP.md  PROJECT_DOCUMENTATION.md  QUICK_START.md  README.md  TERMINAL_PERFORMANCE.md  TROUBLESHOOTING.md  VERIFICATION_CHECKLIST.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/: README.md  cross-platform-build.md  development-workflow.md
.github/workflows/: release.yml
Materm.app/Contents/: CodeResources  Info.plist
Materm.app/Contents/_CodeSignature/: CodeResources
docs/: AUTO_UPDATE_DESIGN.md  AUTO_UPDATE_QUICKSTART.md  CLAUDE_COMMAND_MONITORING.md  MICROPHONE_PERMISSIONS.md  NATIVE_SPEECH_RECOGNITION.md  NOTIFICATIONS.md  SPEECH_RECOGNITION.md  UPDATER_SETUP_INSTRUCTIONS.md
docs/skills/: architecture-deep-dive.md  configuration.md  github-secrets.md  project-overview.md
frontend/: BUILD.md  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.vue  style.css
frontend/src-tauri/: Cargo.toml  Info.plist  output2.txt  output3.txt  setup-whisper.sh  tauri.conf.json  tauri.macos.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: default.json  updater.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs  settings.rs
frontend/src-tauri/src/pty/: commands.rs  manager.rs  mod.rs  shell.rs
frontend/src-tauri/src/speech/: macos.rs  mod.rs  stub.rs  whisper.rs
frontend/src/components/layout/: split-container.vue  tab-bar.vue
frontend/src/components/settings/: about-modal.vue  settings-modal.vue
frontend/src/components/terminal/: pane-toolbar.vue  session-manager.vue  terminal-instance.vue
frontend/src/components/updater/: update-dialog.vue
frontend/src/composables/: use-command-monitor.ts  use-keyboard-shortcuts.ts  use-native-speech.ts  use-notification.ts  use-platform.ts  use-pty-session.ts  use-speech-recognition.ts  use-terminal-performance.ts  use-updater.ts
frontend/src/i18n/locales/: en.ts  zh-CN.ts
frontend/src/settings/: themes.ts
frontend/src/stores/: terminal-store.ts
scripts/: generate_release_secrets.sh
src/: App.vue
src-tauri/: Cargo.toml  Info.plist  WHISPER_README.md  entitlements.plist  output.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/pty/: commands.rs  tmux.rs
src/components/claude/: claude-status-bar.vue
src/components/layout/: split-container.vue
src/components/settings/: about-modal.vue  settings-modal.vue
src/components/shared/: task-status-bar.vue
src/components/speech/: speech-indicator.vue
src/components/terminal/: pane-toolbar.vue  terminal-instance.vue
src/components/updater/: update-dialog.vue
src/composables/: TASK_STATUS_README.md  use-claude-status.ts  use-output-buffer.ts  use-speech-recognition.ts  use-task-status.ts
src/composables/parsers/: claude-parser.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  ja.ts  zh-CN.ts
src/stores/: terminal-store.ts
