[package]
name = "materm"
version = "0.1.19"
description = "Modern terminal emulator with iTerm2-style features"
authors = ["Hierifer"]
edition = "2021"

[lib]
name = "materm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
which = "7.0"
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"

# PTY support
portable-pty = "0.8"
uuid = { version = "1", features = ["v7", "v4"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tauri-plugin-updater = "2.10.0"

# tmux integration
regex = "1"
dirs = "5"
lazy_static = "1.4"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# Speech recognition with Whisper
whisper-rs = "0.12"
hound = "3.5"  # For audio file I/O
cpal = "0.15"  # For microphone capture
tauri-plugin-macos-permissions = "2.3.0"
# Legacy macOS native APIs
objc = "0.2"
cocoa = "0.25"
core-foundation = "0.9"
block = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Speech recognition with Whisper
whisper-rs = "0.12"
hound = "3.5"
cpal = "0.15"
