[package]
name = "mat"
version = "0.1.8"
description = "Modern terminal emulator with iTerm2-style features"
authors = ["Hierifer"]
edition = "2021"

[lib]
name = "mat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"

# PTY support
portable-pty = "0.8"
uuid = { version = "1", features = ["v7"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
